Adaptations to runtime for genesis builder

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -71,6 +71,7 @@ std = [
   "sp-io/std",
   "sp-offchain/std",
   "sp-runtime/std",
+  "sp-genesis-builder/std",
   "sp-storage/std",
   "sp-session/std",
   "sp-staking/std",
@@ -242,6 +243,7 @@ sp-transaction-pool = { workspace = true, default-features = false }
 sp-version = { workspace = true, default-features = false }
 sp-npos-elections = { workspace = true, default-features = false }
 sp-consensus-aura = { workspace = true, default-features = false }
+sp-genesis-builder.workspace = true
 frame-try-runtime = { workspace = true, default-features = false, optional = true }
 primitives = { default-features = false, path = "../../primitives" }
 pallet-allocations = { default-features = false, path = "../../pallets/allocations" }
