--- a/Cargo.toml
+++ b/Cargo.toml
@@ -103,6 +103,7 @@ sp-core = { version = "28.0.0", default-features = false }
 sp-inherents = { version = "26.0.0", default-features = false }
 sp-io = { version = "30.0.0", default-features = false }
 sp-keystore = { version = "0.34.0", default-features = false }
+sp-genesis-builder = { version = "0.7.0", default-features = false}
 sp-npos-elections = { version = "26.0.0", default-features = false }
 sp-offchain = { version = "26.0.0", default-features = false }
 sp-runtime = { version = "31.0.0", default-features = false }
