Replace deprecated types and consolidate development testnets (#842)
* Replace deprecated type with `FungibleAdapter`
* Remove deprecated function `from_genesis()`
* Code cleanup
* Combine dev and local testnets to one config

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -103,6 +103,7 @@ sp-core = { version = "28.0.0", default-features = false }
 sp-inherents = { version = "26.0.0", default-features = false }
 sp-io = { version = "30.0.0", default-features = false }
 sp-keystore = { version = "0.34.0", default-features = false }
+sp-genesis-builder = { version = "0.7.0", default-features = false}
 sp-npos-elections = { version = "26.0.0", default-features = false }
 sp-offchain = { version = "26.0.0", default-features = false }
 sp-runtime = { version = "31.0.0", default-features = false }
@@ -138,5 +139,6 @@ log = { version = "0.4.17", default-features = false }
 safe-mix = { version = "1.0.1", default-features = false }
 scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
 serde = { version = "1.0.152", default-features = false }
+serde_json = { version = "1.0.104", default-features = false }
 static_assertions = "1.1.0"
 smallvec = "1.9.0"
