Paradis snap name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,7 +120,7 @@ jobs:
         with: 
           repository: "NodleCode/paradis-snapshot"
           latest: true
-          fileName: "paradis-snapshot-full.snap.bz2"
+          fileName: "paradis-snapshot-full.bz2"
           out-file-path: "snaps"
           extract: false
       - run: bunzip2 snaps/paradis-snapshot-full.bz2
