Root index.html for docs

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -29,7 +29,9 @@ jobs:
       - name: Setup sccache
         uses: mozilla-actions/sccache-action@v0.0.4
       - name: Build the docs
-        run: cargo doc --all --no-deps
+        run: |
+           cargo doc --all --no-deps
+           cp -f .maintain/index.html target/doc
       - name: Deploy the docs
         if: github.event_name != 'pull_request'
         uses: peaceiris/actions-gh-pages@v3
