--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,7 @@ jobs:
           files: lcov.info
 
   try-runtime-prepare:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-4-core
     steps:
       - uses: actions/checkout@v4
       - name: Install protobuf-compiler
