--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
           toolchain: ${{ env.toolchain }}
 
   test-runtime:
-    runs-on: ubuntu-latest-8-cores
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -74,7 +74,7 @@ jobs:
         run: cargo test --all-features -p nodle-parachain
 
   tests-with-linecoverage:
-    runs-on: ubuntu-latest-4-cores
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -99,7 +99,8 @@ jobs:
           files: lcov.info
 
   try-runtime-prepare:
-    runs-on: ubuntu-latest-4-core
+    runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
       - name: Install protobuf-compiler
