--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,7 +12,7 @@ jobs:
 
   container_gpr:
     name: Build and push docker image
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-8-core
 
     steps:
 
