Add workflow for paradis try-runtime (#843)
* Add workflow for paradis try-runtime

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
           toolchain: ${{ env.toolchain }}
 
   test-runtime:
-    runs-on: ubuntu-latest-8-cores
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -74,7 +74,7 @@ jobs:
         run: cargo test --all-features -p nodle-parachain
 
   tests-with-linecoverage:
-    runs-on: ubuntu-latest-4-cores
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -98,7 +98,7 @@ jobs:
           fail_ci_if_error: false
           files: lcov.info
 
-  try-runtime:
+  try-runtime-prepare:
     runs-on: ubuntu-latest
 
     steps:
@@ -116,17 +116,46 @@ jobs:
         uses: mozilla-actions/sccache-action@v0.0.4
       - name: Build runtime
         run: cargo build --release --features=try-runtime -p runtime-eden
-      - name: Check Version
-        run: |
-          echo -n "eden_rev=" >> $GITHUB_OUTPUT
-          curl -s --request POST   --url https://nodle-parachain.api.onfinality.io/public   --header 'Content-Type: application/json'   --data '{
-              "jsonrpc": "2.0",
-               "method": "state_getRuntimeVersion",
-               "params": [],
-               "id": 1
-             }' | jq .result.specVersion | sed 's/^/try-runtime-snapshot-eden-spec-/' >> $GITHUB_OUTPUT
-           cat $GITHUB_OUTPUT
-        id: get_version
+      - name: Upload runtime artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: try_runtime
+          path: target/release/wbuild/runtime-eden/runtime_eden.wasm
+
+  try-runtime-paradis-execute:
+    runs-on: ubuntu-latest
+    needs: try-runtime-prepare
+    steps:
+      - name: Download runtime artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: try_runtime
+          path: try_runtime
+      - uses: robinraju/release-downloader@v1.9
+        with: 
+          repository: "NodleCode/paradis-snapshot"
+          latest: true
+          fileName: "paradis-snapshot-full.bz2"
+          out-file-path: "snaps"
+          extract: false
+      - run: bunzip2 snaps/paradis-snapshot-full.bz2
+      - name: Run try-runtime paradis
+        uses: NodleCode/action-try-runtime/check@v0.6.1
+        with:
+          snap: snaps/paradis-snapshot-full
+          runtime: try_runtime/runtime_eden.wasm
+          checks: "all"
+          options: "--disable-idempotency-checks"
+  
+  try-runtime-eden-execute:
+    runs-on: ubuntu-latest
+    needs: try-runtime-prepare
+    steps:
+      - name: Download runtime artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: try_runtime
+          path: try_runtime
       - uses: robinraju/release-downloader@v1.9
         with: 
           repository: "NodleCode/eden-snapshot"
@@ -138,6 +167,6 @@ jobs:
         uses: NodleCode/action-try-runtime/check@v0.6.1
         with:
           snap: snaps/eden-snapshot-full
-          runtime: target/release/wbuild/runtime-eden/runtime_eden.wasm
+          runtime: try_runtime/runtime_eden.wasm
           checks: "all"
           options: "--disable-idempotency-checks"
