Import state from running eden chain at 4541250
create some chainspe magic to generate a new
genesis for chain at release 2.5.2

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -22,11 +22,14 @@ runtime-benchmarks = [
 ]
 
 [dependencies]
+bzip2-rs = "0.1.2"
 clap = { version = "4.1.8", features = ["derive"] }
 derive_more = "0.99.2"
 log = "0.4.17"
 codec = { package = "parity-scale-codec", version = "3.0.0" }
 serde = { version = "1.0.152", features = ["derive"] }
+serde_json.workspace = true
+hex-literal = "0.4.1"
 
 # RPC related Dependencies
 jsonrpsee = { version = "0.16.2", features = ["server"] }
