--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ resolver = "1"
 # Substrate runtime requires unwind apparently, and anyways it gives more useful
 # panic messages which can be useful for troubleshooting purposes
 panic = "unwind"
+[workspace.dependencies]
+hex-literal = { version = "0.4.1" }
+serde = { version = "1.0.152", default-features = false }
+serde_json = { version = "1.0.104", default-features = false }
