--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -100,6 +100,6 @@ polkadot-parachain-primitives.workspace = true
 polkadot-primitives.workspace = true
 polkadot-service.workspace = true
 xcm = { workspace = true, default-features = false}
-
+hex-literal = "0.4.1"
 [dev-dependencies]
 hex-literal = {workspace = true }
