--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -22,6 +22,7 @@ runtime-benchmarks = [
 ]
 
 [dependencies]
+bzip2-rs = "0.1.2"
 clap = { workspace = true, features = ["derive"] }
 derive_more.workspace = true
 log = { workspace = true, default-features = true}
