WIP cleaning up in json is not sucessful

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -29,6 +29,7 @@ log = { workspace = true, default-features = true}
 codec.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
+thiserror.workspace = true
 
 # RPC related Dependencies
 jsonrpsee = { workspace = true, features = ["server"] }
