--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Check for json syntax errors 1
-        run: "for i in `git ls-tree --full-tree -r --name-only HEAD |grep json`; do echo Checking $i:; json_pp <$i >/dev/null || echo ERROR: $i failed; done"
+        run: "for i in `git ls-tree --full-tree -r --name-only HEAD |grep json$`; do echo Checking $i:; json_pp <$i >/dev/null || echo ERROR: $i failed; done"
       - name: Check for json syntax errors 2
-        run: "for i in `git ls-tree --full-tree -r --name-only HEAD |grep json`; do echo Checking $i:; json_pp <$i >/dev/null ; done"
+        run: "for i in `git ls-tree --full-tree -r --name-only HEAD |grep json$`; do echo Checking $i:; json_pp <$i >/dev/null ; done"
   lints:
     runs-on: ubuntu-latest-8-cores
     steps:
