--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,15 +27,15 @@ cumulus-pallet-xcmp-queue = { version = "0.7.0", default-features = false }
 cumulus-primitives-core = { version = "0.7.0", default-features = false }
 cumulus-primitives-parachain-inherent = { version = "0.7.0", default-features = false }
 cumulus-primitives-timestamp = { version = "0.7.0", default-features = false }
-cumulus-primitives-utility = { version = "0.7.3", default-features = false }
-cumulus-client-consensus-proposer = { version = "0.7.0", default-features = false }
+cumulus-primitives-utility = { version = "0.7.0", default-features = false }
+cumulus-client-consensus-proposer = { version = "0.7.0", default-features = false}
 cumulus-relay-chain-inprocess-interface = { version = "0.7.0", default-features = false }
 cumulus-relay-chain-interface = { version = "0.7.0", default-features = false }
 cumulus-relay-chain-rpc-interface = { version = "0.7.0", default-features = false }
 frame-benchmarking-cli = { version = "32.0.0", default-features = false }
 frame-benchmarking = { version = "28.0.0", default-features = false }
 frame-executive = { version = "28.0.0", default-features = false }
-frame-metadata-hash-extension = { version = "0.1.0", default-features = false }
+frame-metadata-hash-extension = { version = "=0.1.0", default-features = false }
 frame-rpc-system = { version = "28.0.0", package = "substrate-frame-rpc-system", default-features = false }
 frame-support = { version = "28.0.0", default-features = false }
 frame-system-benchmarking = { version = "28.0.0", default-features = false }
@@ -119,7 +119,7 @@ sp-transaction-pool = { version = "26.0.0", default-features = false }
 sp-version = { version = "29.0.0", default-features = false }
 substrate-build-script-utils = { version = "11.0.0", default-features = false }
 substrate-prometheus-endpoint = { version = "0.17.0", default-features = false }
-substrate-wasm-builder = { version = "17.0.0" }
+substrate-wasm-builder = { version = "23.0.0" }
 xcm-builder = { version = "7.0.3", package = "staging-xcm-builder", default-features = false }
 xcm-executor = { version = "7.0.3", package = "staging-xcm-executor", default-features = false }
 xcm = { version = "7.0.0", package = "staging-xcm", default-features = false }
