--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -165,6 +165,20 @@ try-runtime = [
   "pallet-message-queue/try-runtime"
 ]
 
+# Enable the metadata hash generation.
+#
+# This is hidden behind a feature because it increases the compile time.
+# The wasm binary needs to be compiled twice, once to fetch the metadata,
+# generate the metadata hash and then a second time with the
+# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
+# extension.
+metadata-hash = ["substrate-wasm-builder?/metadata-hash"]
+
+# A convenience feature for enabling things when doing a build
+# for an on-chain release.
+# on-chain-release-build = ["metadata-hash"]
+on-chain-release-build = ["sp-api/disable-logging", "metadata-hash"]
+
 [dependencies]
 static_assertions.workspace = true
 getrandom = { workspace = true, features = ["js"] }
@@ -176,6 +190,7 @@ scale-info = { workspace = true, default-features = false, features = ["derive"]
 serde = { workspace = true, optional = true, features = ["derive"] }
 smallvec.workspace = true
 lazy_static = {workspace = true, default-features = false, features = ["spin_no_std"] }
+
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
 frame-system-benchmarking = { workspace = true, default-features = false, optional = true }
 frame-executive = { workspace = true, default-features = false }
@@ -260,16 +275,3 @@ orml-traits = { workspace = true, default-features = false }
 
 [build-dependencies]
 substrate-wasm-builder = { workspace = true , optional = true }
-
-# Enable the metadata hash generation.
-#
-# This is hidden behind a feature because it increases the compile time.
-# The wasm binary needs to be compiled twice, once to fetch the metadata,
-# generate the metadata hash and then a second time with the
-# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
-# extension.
-# metadata-hash = ["substrate-wasm-builder/metadata-hash"]
-
-# A convenience feature for enabling things when doing a build
-# for an on-chain release.
-# on-chain-release-build = ["metadata-hash"]
