--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = ["node", "pallets/*", "primitives", "runtimes/*", "support"]
 resolver = "1"
 
 [workspace.package]
-version= "2.5.3"
+version = "2.5.3"
 authors = ["Nodle Developers <eng@nodle.com>"]
 edition = "2021"
 
@@ -28,7 +28,7 @@ cumulus-primitives-core = { version = "0.7.0", default-features = false }
 cumulus-primitives-parachain-inherent = { version = "0.7.0", default-features = false }
 cumulus-primitives-timestamp = { version = "0.7.0", default-features = false }
 cumulus-primitives-utility = { version = "0.7.0", default-features = false }
-cumulus-client-consensus-proposer = { version = "0.7.0", default-features = false}
+cumulus-client-consensus-proposer = { version = "0.7.0", default-features = false }
 cumulus-relay-chain-inprocess-interface = { version = "0.7.0", default-features = false }
 cumulus-relay-chain-interface = { version = "0.7.0", default-features = false }
 cumulus-relay-chain-rpc-interface = { version = "0.7.0", default-features = false }
@@ -103,7 +103,7 @@ sp-core = { version = "28.0.0", default-features = false }
 sp-inherents = { version = "26.0.0", default-features = false }
 sp-io = { version = "30.0.0", default-features = false }
 sp-keystore = { version = "0.34.0", default-features = false }
-sp-genesis-builder = { version = "0.7.0", default-features = false}
+sp-genesis-builder = { version = "0.7.0", default-features = false }
 sp-npos-elections = { version = "26.0.0", default-features = false }
 sp-offchain = { version = "26.0.0", default-features = false }
 sp-runtime = { version = "31.0.0", default-features = false }
@@ -119,9 +119,9 @@ sp-version = { version = "29.0.0", default-features = false }
 substrate-build-script-utils = { version = "11.0.0", default-features = false }
 substrate-prometheus-endpoint = { version = "0.17.0", default-features = false }
 substrate-wasm-builder = { version = "17.0.0", default-features = false }
-xcm-builder = { package="staging-xcm-builder", version = "7.0.0", default-features = false }
-xcm-executor = { package="staging-xcm-executor", version = "7.0.0", default-features = false }
-xcm = { package = "staging-xcm", version = "7.0.0", default-features = false}
+xcm-builder = { package = "staging-xcm-builder", version = "7.0.0", default-features = false }
+xcm-executor = { package = "staging-xcm-executor", version = "7.0.0", default-features = false }
+xcm = { package = "staging-xcm", version = "7.0.0", default-features = false }
 
 #ORML
 orml-xtokens = { version = "0.7.0", default-features = false }
@@ -129,15 +129,19 @@ orml-traits = { version = "0.7.0", default-features = false }
 
 #Crates
 clap = { version = "4.1.8", features = ["derive"] }
-codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false}
+codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
 derive_more = "0.99.2"
 getrandom = { version = "0.2", features = ["js"] }
 hex-literal = { version = "0.4.1" }
 jsonrpsee = { version = "0.16.2", features = ["server"] }
-lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"] }
+lazy_static = { version = "1.4.0", default-features = false, features = [
+    "spin_no_std",
+] }
 log = { version = "0.4.17", default-features = false }
 safe-mix = { version = "1.0.1", default-features = false }
-scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
+scale-info = { version = "2.5.0", default-features = false, features = [
+    "derive",
+] }
 serde = { version = "1.0.152", default-features = false }
 serde_json = { version = "1.0.104", default-features = false }
 static_assertions = "1.1.0"
