--- a/pallets/grants/Cargo.toml
+++ b/pallets/grants/Cargo.toml
@@ -33,7 +33,9 @@ try-runtime = ["frame-support/try-runtime"]
 log = { workspace = true, default-features = false }
 codec = { workspace = true, default-features = false, features = ["derive"] }
 serde = { workspace = true, optional = true }
-scale-info = { workspace = true, default-features = false, features = ["derive"] }
+scale-info = { workspace = true, default-features = false, features = [
+	"derive",
+] }
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
 frame-support = { workspace = true, default-features = false }
 frame-system = { workspace = true, default-features = false }
@@ -45,4 +47,4 @@ sp-std = { workspace = true, default-features = false }
 [dev-dependencies]
 sp-core = { workspace = true, default-features = false }
 sp-tracing = { workspace = true, default-features = false }
-
+hex-literal = { workspace = true }
