--- a/pallets/grants/Cargo.toml
+++ b/pallets/grants/Cargo.toml
@@ -16,6 +16,8 @@ std = [
 	"codec/std",
 	"serde",
 	"frame-support/std",
+	"frame-benchmarking/std",
+
 	"frame-system/std",
 	"pallet-balances/std",
 	"sp-runtime/std",
@@ -25,6 +27,7 @@ std = [
 runtime-benchmarks = [
 	"frame-benchmarking",
 	"frame-system/runtime-benchmarks",
+	"sp-runtime/runtime-benchmarks",
 	"frame-support/runtime-benchmarks",
 ]
 try-runtime = ["frame-support/try-runtime"]
@@ -43,8 +46,8 @@ pallet-balances = { workspace = true, default-features = false }
 sp-io = { workspace = true, default-features = false }
 sp-runtime = { workspace = true, default-features = false }
 sp-std = { workspace = true, default-features = false }
+hex-literal = { workspace = true }
 
 [dev-dependencies]
 sp-core = { workspace = true, default-features = false }
 sp-tracing = { workspace = true, default-features = false }
-hex-literal = { workspace = true }
