--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ panic = "unwind"
 
 [workspace.dependencies]
 #Polkadot-SDK
+# polkadot-sdk = { version = "0.3.0", default-features = false }
 cumulus-client-cli = { version = "0.14.0", default-features = false }
 cumulus-client-collator = { version = "0.14.0", default-features = false }
 cumulus-client-consensus-aura = { version = "0.14.0", default-features = false }
@@ -35,6 +36,7 @@ cumulus-relay-chain-rpc-interface = { version = "0.14.0", default-features = fal
 frame-benchmarking-cli = { version = "39.0.0", default-features = false }
 frame-benchmarking = { version = "35.0.0", default-features = false }
 frame-executive = { version = "35.0.0", default-features = false }
+frame-metadata-hash-extension = { version = "0.3.0", default-features = false }
 frame-rpc-system = { version = "35.0.0", package = "substrate-frame-rpc-system", default-features = false }
 frame-support = { version = "35.0.0", default-features = false }
 frame-system-benchmarking = { version = "35.0.0", default-features = false }
@@ -119,6 +121,7 @@ sp-version = { version = "36.0.0", default-features = false }
 substrate-build-script-utils = { version = "11.0.0", default-features = false }
 substrate-prometheus-endpoint = { version = "0.17.0", default-features = false }
 substrate-wasm-builder = { version = "23.0.0", default-features = false }
+tuplex = { version = "0.1.0", default-features = false }
 xcm-builder = { version = "14.0.0", package = "staging-xcm-builder", default-features = false }
 xcm-executor = { version = "14.0.0", package = "staging-xcm-executor", default-features = false }
 xcm = { version = "14.0.0", package = "staging-xcm", default-features = false }
