--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -178,6 +178,8 @@ lazy_static = {workspace = true, default-features = false, features = ["spin_no_
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
 frame-system-benchmarking = { workspace = true, default-features = false, optional = true }
 frame-executive = { workspace = true, default-features = false }
+frame-metadata-hash-extension = { workspace = true, default-features = false }
+
 frame-support = { workspace = true, default-features = false }
 frame-system = { workspace = true, default-features = false }
 frame-system-rpc-runtime-api = { workspace = true, default-features = false }
@@ -252,6 +254,8 @@ pallet-grants = { default-features = false, path = "../../pallets/grants" }
 pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
 pallet-sponsorship = { default-features = false, path = "../../pallets/sponsorship" }
 pallet-nodle-uniques = { default-features = false, path = "../../pallets/uniques" }
+
+tuplex.workspace = true
 
 orml-xtokens = { workspace = true, default-features = false }
 orml-traits = { workspace = true, default-features = false }
