Frame-support-procedural pinned

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,8 @@ frame-benchmarking = { version = "35.0.0", default-features = false }
 frame-executive = { version = "35.0.0", default-features = false }
 frame-metadata-hash-extension = { version = "0.3.0", default-features = false }
 frame-rpc-system = { version = "35.0.0", package = "substrate-frame-rpc-system", default-features = false }
-frame-support = { version = "35.0.0", default-features = false }
+frame-support = { version = "=35.0.0", default-features = false }
+frame-support-procedural = { version = "=30.0.0", default-features = false }
 frame-system-benchmarking = { version = "35.0.0", default-features = false }
 frame-system = { version = "35.0.0", default-features = false }
 frame-system-rpc-runtime-api = { version = "33.0.0", default-features = false }
