--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -9,6 +9,7 @@ default = ["std"]
 std = [
   "frame-executive/std",
   "frame-support/std",
+  "frame-support-procedural/std",
   "frame-system/std",
   "frame-try-runtime/std",
   "primitives/std",
@@ -181,6 +182,7 @@ frame-executive = { workspace = true, default-features = false }
 frame-metadata-hash-extension = { workspace = true, default-features = false }
 
 frame-support = { workspace = true, default-features = false }
+frame-support-procedural = { workspace = true, default-features = false }
 frame-system = { workspace = true, default-features = false }
 frame-system-rpc-runtime-api = { workspace = true, default-features = false }
 pallet-authority-discovery = { workspace = true, default-features = false }
