feat(eden-runtime): remove infrequently used unnecessary orml xtoken

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -48,8 +48,6 @@ std = [
   "xcm/std",
   "xcm-builder/std",
   "xcm-executor/std",
-  "orml-xtokens/std",
-  "orml-traits/std",
   "cumulus-pallet-aura-ext/std",
   "cumulus-pallet-dmp-queue/std",
   "cumulus-pallet-parachain-system/std",
@@ -81,7 +79,7 @@ std = [
   "sp-npos-elections/std",
   "pallet-xcm-benchmarks/std",
   "pallet-message-queue/std",
-  "parachains-common/std"
+  "parachains-common/std",
 ]
 runtime-benchmarks = [
   "frame-benchmarking/runtime-benchmarks",
@@ -117,7 +115,7 @@ runtime-benchmarks = [
   "cumulus-pallet-dmp-queue/runtime-benchmarks",
   "cumulus-primitives-core/runtime-benchmarks",
   "pallet-message-queue/runtime-benchmarks",
-  "parachains-common/runtime-benchmarks"
+  "parachains-common/runtime-benchmarks",
 ]
 try-runtime = [
   "frame-executive/try-runtime",
@@ -158,9 +156,8 @@ try-runtime = [
   "cumulus-pallet-xcmp-queue/try-runtime",
   "pallet-xcm/try-runtime",
   "parachain-info/try-runtime",
-  "orml-xtokens/try-runtime",
   "cumulus-pallet-parachain-system/try-runtime",
-  "pallet-message-queue/try-runtime"
+  "pallet-message-queue/try-runtime",
 ]
 
 [dependencies]
@@ -170,10 +167,14 @@ safe-mix = { workspace = true, default-features = false }
 codec = { workspace = true, default-features = false, features = ["derive"] }
 hex-literal.workspace = true
 log = { workspace = true, default-features = false }
-scale-info = { workspace = true, default-features = false, features = ["derive"] }
+scale-info = { workspace = true, default-features = false, features = [
+  "derive",
+] }
 serde = { workspace = true, optional = true, features = ["derive"] }
 smallvec.workspace = true
-lazy_static = {workspace = true, default-features = false, features = ["spin_no_std"] }
+lazy_static = { workspace = true, default-features = false, features = [
+  "spin_no_std",
+] }
 
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
 frame-system-benchmarking = { workspace = true, default-features = false, optional = true }
@@ -213,7 +214,7 @@ polkadot-parachain-primitives = { workspace = true, default-features = false }
 polkadot-runtime-common = { workspace = true, default-features = false }
 polkadot-primitives = { workspace = true, default-features = false }
 
-xcm = { workspace = true, default-features = false}
+xcm = { workspace = true, default-features = false }
 xcm-builder = { workspace = true, default-features = false }
 xcm-executor = { workspace = true, default-features = false }
 cumulus-pallet-aura-ext = { workspace = true, default-features = false }
@@ -253,8 +254,6 @@ pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
 pallet-sponsorship = { default-features = false, path = "../../pallets/sponsorship" }
 pallet-nodle-uniques = { default-features = false, path = "../../pallets/uniques" }
 
-orml-xtokens = { workspace = true, default-features = false }
-orml-traits = { workspace = true, default-features = false }
 
 [build-dependencies]
 substrate-wasm-builder.workspace = true
